grml-live (0.7) unstable; urgency=low

  * Update templates/boot/addons/allinone.img to current version
    from http://home.arcor.de/mschierlm/bootdisk/
    Thanks, Michael Schierl.
  * Remove packages from GRML_FULL:
    - sound-recorder (#288211)
    - emelfm (#364442)
  * Readd libewf to GRML_FULL.

 -- Michael Prokop <mika@grml.org>  Sun, 24 Feb 2008 19:24:27 +0100

grml-live (0.6) unstable; urgency=low

  * Write squashfs filename to /live/filesystem.module.
  * Adjust grml-live-remaster for new file system layout
    and add support for working on a booted USB device.

 -- Michael Prokop <mika@grml.org>  Sat, 23 Feb 2008 11:12:10 +0100

grml-live (0.5) unstable; urgency=low

  * Make sure we use ${GRML_NAME}.squashfs instead of hardcoded
    grml.squashfs.
  * Update bootsplashes to current implementation, based on
    live-initramfs and grml-autoconfig.
  * Get rid of gnu-fdisk in GRML_FULL (it's causing just too many
    headaches, see #461888, #463720 and #445304 for example).
  * Add sshfs to GRML_MEDIUM.

 -- Michael Prokop <mika@grml.org>  Wed, 20 Feb 2008 16:41:06 +0100

grml-live (0.4) unstable; urgency=low

  * Add new packages to GRML_FULL:
    - linux-uvc-modules-2.6.23-grml
    - luvcview
  * Add new packages to GRML_MEDIUM:
    - at76-usb-modules-2.6.23-grml
    - atl2-modules-2.6.23-grml
    - firmware-ralink
    - rt2400-modules-2.6.23-grml
    - rt2500-modules-2.6.23-grml
    - rt73-module-2.6.23-grml
  * Finally fixed the "isolinux does not boot on old hardware" problem.
    The problem was a too big boot/isolinux directory. Thanks a lot
    for all the testing to Andrea Mayr and Wernfried Haas!
    - use /boot/addons/* for allinone.img, balder10.imz, chain.c32,
      menu.c32 and memtest
    - place $GRML_NAME in /boot/$GRML_NAME/ - this should easify
      support of several grml flavours on one single usb pen for the future
    - adjust grub's menu.lst and isolinux.cfg as well as grml-live itself
      for new directory layout