@@ -4,7 +4,7 @@
 DATE=$(date +%Y%m%d)
 ISO_NAME=grml-small_etch_$DATE.iso
 SUITE=etch
-CLASSES='GRMLBASE,GRML_SMALL,REMOVE_DOCS,I386'
+CLASSES='GRMLBASE,GRML_SMALL,REMOVE_DOCS,RELEASE,I386'
 NAME=grml-small
 SCRIPTNAME="$(basename $0)"
 ARCH=i386
