@@ -4,7 +4,7 @@
 DATE=$(date +%Y%m%d)
 ISO_NAME=grml64_etch_$DATE.iso
 SUITE=etch
-CLASSES='GRMLBASE,GRML_FULL,LATEX_CLEANUP,AMD64'
+CLASSES='GRMLBASE,GRML_FULL,LATEX_CLEANUP,RELEASE,AMD64'
 NAME=grml64
 SCRIPTNAME="$(basename $0)"
 ARCH=amd64
