@@ -4,7 +4,7 @@
 DATE=$(date +%Y%m%d)
 ISO_NAME=grml64-small_etch_$DATE.iso
 SUITE=etch
-CLASSES='GRMLBASE,GRML_SMALL,REMOVE_DOCS,AMD64'
+CLASSES='GRMLBASE,GRML_SMALL,REMOVE_DOCS,RELEASE,AMD64'
 NAME=grml64-small
 SCRIPTNAME="$(basename $0)"
 ARCH=amd64
