@@ -7,6 +7,7 @@ grml-live (0.7) unstable; urgency=low
     - sound-recorder (#288211)
     - emelfm (#364442)
   * Readd libewf to GRML_FULL.
+  * buildd: use RELEASE-class in all build scripts
 
  -- Michael Prokop <mika@grml.org>  Sun, 24 Feb 2008 19:24:27 +0100
 
